# cbr-custom--sc-magazine

./: README.md  pyproject.toml  setup.cfg  start-local-server.sh
.github/actions/aws__deploy-lambda/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_custom__sc_magazine/utils/: Version.py
cbr_custom_sc_magazine/lambdas/: handler.py
cbr_custom_sc_magazine/sc_magazine/content/: Http_Content__Articles.py  SC_Magazine_Parser.py
cbr_custom_sc_magazine/sc_magazine/fast_api/: SC_Magazine__Fast_API.py
cbr_custom_sc_magazine/sc_magazine/fast_api/routes/: Routes__Info.py  Routes__SC_Magazine__UK.py  Routes__UK.py
cbr_custom_sc_magazine/sc_magazine/schema/: Article.py  Articles_Page.py  Content_Item.py  Expert_Report.py  Home_Page.py  Menu_Item.py  Navigation.py  Page_Metadata.py  Site_Config.py  Social_Link.py  Speaker.py  Video.py  Video_Platform.py  Webinar.py
cbr_custom_sc_magazine/utils/: Version.py
deploy/docker/cbr_custom__sc_magazine/: Dockerfile  docker-compose.yml
deploy/docker/cbr_custom_sc_magazine/: Dockerfile  docker-compose.yml  start.sh
deploy/lambdas/: Deploy_Lambda__Cbr_Custom__SC_Magazine.py  test_Deploy_Lambda__Cbr_Custom__SC_Magazine.py
tests/integration/: sc_magazine__objs_for_tests.py
tests/integration/lambda/: test__int__handler.py
tests/integration/sc_magazine/content/: test_Http_Content__Articles.py  test_SC_Magazine_Parser.py
tests/integration/sc_magazine/fast_api/: test__client__Routes__SC_Magazine__UK.py  (+2 more)
tests/qa/: test__live_lambda_function.py
tests/unit/utils/: test_Version.py
(+8 files in other folders)
