[tool.poetry]
name        = "cbr_custom_sc_magazine"
version     = "v0.2.0"
description = "CBR Custom - SC Magazine"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--sc-magazine"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom--sc-magazine"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
